--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@tailwindcss/vite": "^4.0.0",
+    "tw-animate-css": "^1.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.10",
     "@types/react": "^18.2.48",
